docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>