docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Completed_Amount_During_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Completed_Amount_During_Reschedule__c</fullName>
    <label>Completed_Amount During Reschedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>