docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Completed_Count_During_Reschedule__c.field-meta.xml
<CustomField>
    <fullName>Completed_Count_During_Reschedule__c</fullName>
    <label>Completed Count During Reschedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>