docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Completed_Drafts_Amount__c.field-meta.xml
<CustomField>
    <fullName>Completed_Drafts_Amount__c</fullName>
    <label>Completed Drafts Amount</label>
    <summarizedField>Draft__c.Draft_Total_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Draft__c.Draft_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Draft__c.Program_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>