docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Debit_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Debit_Schedule_Id__c</fullName>
    <label>Debit Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>