docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/DS_Total_Citadel_Fee__c.field-meta.xml
<CustomField>
    <fullName>DS_Total_Citadel_Fee__c</fullName>
    <description>CRM-596: For Docusign Purpose</description>
    <label>DS Total Citadel Fee</label>
    <summarizedField>Draft__c.Citadel_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Draft__c.Draft_Status__c</field>
        <operation>notEqual</operation>
        <value>NSF, Cancelled, Skipped Payment, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Draft__c.Program_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>