docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/DS_Total_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>DS_Total_Service_Fee__c</fullName>
    <description>CD-186: For DocuSign Purpose</description>
    <label>DS Total Service Fee</label>
    <summarizedField>Draft__c.Service_Fee__c</summarizedField>
    <summaryFilterItems>
        <field>Draft__c.Draft_Status__c</field>
        <operation>notEqual</operation>
        <value>NSF, Cancelled, Skipped Payment, Rejected</value>
    </summaryFilterItems>
    <summaryForeignKey>Draft__c.Program_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>