docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/First_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Date__c</fullName>
    <label>First Payment Date</label>
    <type>Date</type>
</CustomField>