docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Last_Completed_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Draft_Date__c</fullName>
    <label>Last Completed Draft Date</label>
    <summarizedField>Draft__c.Draft_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Draft__c.Draft_Status__c</field>
        <operation>equals</operation>
        <value>Processing, Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Draft__c.Program_Plan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>