docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Last_Rescheduled_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Rescheduled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Rescheduled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>