docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Last_Rescheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Rescheduled_Date_Time__c</fullName>
    <label>Last Rescheduled Date Time</label>
    <type>DateTime</type>
</CustomField>