docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Next_Draft_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Draft_Date__c</fullName>
    <label>Next Draft Date</label>
    <summarizedField>Draft__c.Draft_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Draft__c.Draft_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>Draft__c.Program_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>