docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/No_of_Debts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Debts__c</fullName>
    <label>No of Debts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>