docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
                <default>true</default>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>Bi-Monthly</fullName>
                <isActive>false</isActive>
                <label>Bi-Monthly</label>
            </value>
            <value>
                <fullName>Daily</fullName>
                <isActive>false</isActive>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>