docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Processor</label>
    <referenceTo>Payment_Processor__c</referenceTo>
    <relationshipLabel>Program Plans</relationshipLabel>
    <relationshipName>Program_Plans2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>