docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Processor_Manually_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Processor_Manually_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processor Manually Overridden</label>
    <type>Checkbox</type>
</CustomField>