docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Program_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee_Percentage__c</fullName>
    <label>Program Fee Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>20</fullName>
                <default>true</default>
                <label>20</label>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>30</fullName>
                <isActive>false</isActive>
                <label>30</label>
            </value>
            <value>
                <fullName>35</fullName>
                <isActive>false</isActive>
                <label>35</label>
            </value>
            <value>
                <fullName>40</fullName>
                <isActive>false</isActive>
                <label>40</label>
            </value>
            <value>
                <fullName>45</fullName>
                <isActive>false</isActive>
                <label>45</label>
            </value>
            <value>
                <fullName>50</fullName>
                <isActive>false</isActive>
                <label>50</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>