docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Retainer_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Retainer_Percentage__c</fullName>
    <label>Retainer Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <default>true</default>
                <label>10</label>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>12.5</fullName>
            </value>
            <value>
                <fullName>15</fullName>
                <isActive>false</isActive>
                <label>15</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>