docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Retainer_SetupFee_Draft__c.field-meta.xml
<CustomField>
    <fullName>Retainer_SetupFee_Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retainer SetupFee Draft</label>
    <type>Checkbox</type>
</CustomField>