docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Settlement_Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Program_Fee__c</fullName>
    <label>Settlement - Program Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>