docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>850</fullName>
                <default>true</default>
                <label>850</label>
            </value>
            <value>
                <fullName>995</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>750</fullName>
                <isActive>false</isActive>
                <label>750</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>