docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Weekly_Draft_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Draft_Amount__c</fullName>
    <label>Weekly Draft Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>