docs/sf-export/sfdx-raw/objects/Program_Plan__c/fields/Weekly_Payment_Day__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment_Day__c</fullName>
    <label>Weekly Payment Day</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
                <default>true</default>
                <label>Monday</label>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
                <isActive>false</isActive>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>Sunday</fullName>
                <isActive>false</isActive>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>