docs/sf-export/sfdx-raw/objects/Program_Plan__c/validationRules/Program_Length_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Program_Length_Approval_Process</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT( $Permission.Bypass_Validation_Rule ),
NOT( $Permission.Bypass_Program_Length_Approval),
CONTAINS($Profile.Name, &apos;Closer&apos;),  
ISCHANGED(Payment_Term__c),
    OR( 
            (Opportunity__r.Total_Debt__c &lt;=49999 &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;6&apos;))),
            ((Opportunity__r.Total_Debt__c &gt;= 50000 &amp;&amp; Opportunity__r.Total_Debt__c &lt;= 74999) &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;8&apos;))),
            ((Opportunity__r.Total_Debt__c &gt;= 75000 &amp;&amp; Opportunity__r.Total_Debt__c &lt;= 99999) &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;10&apos;))),
            ((Opportunity__r.Total_Debt__c &gt;= 100000 &amp;&amp; Opportunity__r.Total_Debt__c &lt;= 149999) &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;11&apos;))),
            ((Opportunity__r.Total_Debt__c &gt;= 150000 &amp;&amp; Opportunity__r.Total_Debt__c &lt;= 199999) &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;12&apos;))),
            ((Opportunity__r.Total_Debt__c &gt;= 200000 &amp;&amp; Opportunity__r.Total_Debt__c &lt;= 299999) &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;14&apos;))),
            (Opportunity__r.Total_Debt__c &gt;= 300000 &amp;&amp; NOT(ISPICKVAL(Payment_Term__c, &apos;16&apos;)))
        )    
   )</errorConditionFormula>
    <errorMessage>Closer profile can&apos;t change payment terms. Need to get approval from supervisors.</errorMessage>
</ValidationRule>