docs/sf-export/sfdx-raw/objects/Program_Plan__c/validationRules/Restrict_to_Reparent_the_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_to_Reparent_the_Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT( $Permission.Bypass_Validation_Rule ),
    OR(
        ISCHANGED( Client__c ),
        ISCHANGED( Opportunity__c )
    ),
    Client__c &lt;&gt; Opportunity__r.AccountId
)</errorConditionFormula>
    <errorMessage>Program Plan cannot be reparented to different Account</errorMessage>
</ValidationRule>